syntax = "proto3";

option csharp_namespace = "GrpcDiscordManager";

service Commander {
  rpc PlayCommand (PlayRequest) returns (CommandResponse);
  rpc SkipCommand (CommandRequest) returns (CommandResponse);
  rpc StopCommand (CommandRequest) returns (CommandResponse);
  rpc QueueCommand (CommandRequest) returns (CommandResponse);
  rpc PauseCommand (CommandRequest) returns (CommandResponse);
  rpc ResumeCommand (CommandRequest) returns (CommandResponse);
  rpc SeekCommand (SeekRequest) returns (CommandResponse);
}

message CommandRequest {
  uint64 guild_id = 1;
}

message CommandResponse {
  string error = 1;
  string Message = 2;
}

message PlayRequest {
  uint64 guild_id = 1;
  uint64 voice_channel_id = 2;
  string search = 3;
}

message SeekRequest {
  uint64 guild_id = 1;
  int32 minutes = 2;
  int32 seconds = 3;
}